--- a/gb/25/9/28/n14604459.md
+++ b/gb/25/9/28/n14604459.md
@@ -7,52 +7,46 @@
 <hr>
 <p>【大纪元2025年09月28日讯】（大纪元记者简惠敏台湾屏东报导）原住民族文化发展中心今年第2场主题展览《umaumalran－成为说故事的人》，27日于屏东县玛家乡“台湾原住民族文化园区”开展，来自台东卑南族知本部落的艺术家杨慕仁，透过绘画探索文化根源，展现原住民族如何以自身语言，回应当代与全球对话。</p>
 <p>策展人邓雪真表示，杨慕仁以卑南语为叙事轴线，从倾听到表达再到转化，构筑一条文化记忆持续生成的创作路径。这次展出〈听故事的人〉、〈说故事的人〉及〈成为说故事的人〉系列作品，共30余件。</p>
-<figure id="attachment_14604461" aria-describedby="caption-attachment-14604461" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14604461-798295.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14604461" src="https://i.epochtimes.com/assets/uploads/2025/09/id14604461-798295-600x412.jpg" alt="" width="600" b="412" /></a><figcaption id="caption-attachment-14604461" class="wp-caption-text">杨慕仁个展“成为说故事的人”，以卑南语为叙事轴线，希望观众透过作品听见语言的色彩，看见故事的能量。（简惠敏／大纪元）</figcaption></figure>
+<figure id="attachment_14604461" aria-describedby="caption-attachment-14604461" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14604461-798295.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14604461" src="https://i.epochtimes.com/assets/uploads/2025/09/id14604461-798295-600x412.jpg" alt="" width="600" b="412"></a><figcaption id="caption-attachment-14604461" class="wp-caption-text">杨慕仁个展“成为说故事的人”，以卑南语为叙事轴线，希望观众透过作品听见语言的色彩，看见故事的能量。（简惠敏／大纪元）</figcaption></figure>
 <p>在〈听故事的人〉中，杨慕仁以语言声波为灵感，描绘故事传递的能量；〈说故事的人〉则以瓶罐与生活场景，呈现部落聚会中饮酒、闲谈、说故事的日常；〈成为说故事的人〉则将族服图样、传统色彩与声波意象交织，回应艺术家自身与部落的连结。</p>
 <p>“把听来的记住，把记住的画出来。”杨慕仁说，他的创作不仅是记录，更是转译，让观众在观看中参与文化叙事的重构；作品中常见的族服菱形纹样、知本大石、神话植物及青年会所，皆非单纯装饰，而是蕴含灵性与身体感的文化语汇。</p>
 <p>杨慕仁表示，这次展览是10年来创作的总结，记录卑南族神话、部落人文与生活趣事，他特别向部落长辈请教族语用词，确保展名能真实传达“说故事”的精神，并希望观众透过作品展开一段愉快的文化旅程。</p>
-<figure id="attachment_14604462" aria-describedby="caption-attachment-14604462" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14604462-798296.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14604462" src="https://i.epochtimes.com/assets/uploads/2025/09/id14604462-798296-600x344.jpg" alt="" width="600" b="344" /></a><figcaption id="caption-attachment-14604462" class="wp-caption-text">在〈听故事的人〉作品中，杨慕仁以语言声波为灵感，描绘故事传递的能量。（简惠敏／大纪元）</figcaption></figure>
+<figure id="attachment_14604462" aria-describedby="caption-attachment-14604462" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14604462-798296.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14604462" src="https://i.epochtimes.com/assets/uploads/2025/09/id14604462-798296-600x344.jpg" alt="" width="600" b="344"></a><figcaption id="caption-attachment-14604462" class="wp-caption-text">在〈听故事的人〉作品中，杨慕仁以语言声波为灵感，描绘故事传递的能量。（简惠敏／大纪元）</figcaption></figure>
 <p>原发中心主任邱黄肇崇表示，在全球原住民艺术语境下，“知识主体性”、“口述历史”与“地方实践”是重要讨论面向。杨慕仁的绘画回应了这些议题，突破了西方策展视角与地方主义框架，展现原住民族艺术家如何在当代建构自身文化的未来。</p>
 <p>黄肇崇说，原住民族文化蕴藏于生活与创作中，艺术家以新媒材展现传统智慧，让更多人理解与欣赏，期盼园区成为世代交流的平台，将文化感动化为故事传递。</p>
 <p>展览名称“umaumalran”象征“成为说故事的人”，不仅是艺术家创作的阶段性总结，更是原住民文化记忆于当代的典范实践。展期自即日起，至11月16日止。</p>
-<figure id="attachment_14604463" aria-describedby="caption-attachment-14604463" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14604463-798297.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14604463" src="https://i.epochtimes.com/assets/uploads/2025/09/id14604463-798297-600x390.jpg" alt="" width="600" b="390" /></a><figcaption id="caption-attachment-14604463" class="wp-caption-text">作品〈成为说故事的人〉中，杨慕仁将族服图样、传统色彩与声波意象交织，回应艺术家自身与部落的连结。（简惠敏／大纪元）</figcaption></figure>
-<figure id="attachment_14604464" aria-describedby="caption-attachment-14604464" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14604464-798298.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14604464" src="https://i.epochtimes.com/assets/uploads/2025/09/id14604464-798298-600x416.jpg" alt="" width="600" b="416" /></a><figcaption id="caption-attachment-14604464" class="wp-caption-text">杨慕仁个展“成为说故事的人”，以卑南语为叙事轴线，希望观众透过作品听见语言的色彩，看见故事的能量。（简惠敏／大纪元）</figcaption></figure>
-<figure id="attachment_14604465" aria-describedby="caption-attachment-14604465" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14604465-798299.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14604465" src="https://i.epochtimes.com/assets/uploads/2025/09/id14604465-798299-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14604465" class="wp-caption-text">杨慕仁个展“成为说故事的人”，以卑南语为叙事轴线，希望观众透过作品听见语言的色彩，看见故事的能量。（简惠敏／大纪元）</figcaption></figure>
+<figure id="attachment_14604463" aria-describedby="caption-attachment-14604463" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14604463-798297.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14604463" src="https://i.epochtimes.com/assets/uploads/2025/09/id14604463-798297-600x390.jpg" alt="" width="600" b="390"></a><figcaption id="caption-attachment-14604463" class="wp-caption-text">作品〈成为说故事的人〉中，杨慕仁将族服图样、传统色彩与声波意象交织，回应艺术家自身与部落的连结。（简惠敏／大纪元）</figcaption></figure>
+<figure id="attachment_14604464" aria-describedby="caption-attachment-14604464" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14604464-798298.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14604464" src="https://i.epochtimes.com/assets/uploads/2025/09/id14604464-798298-600x416.jpg" alt="" width="600" b="416"></a><figcaption id="caption-attachment-14604464" class="wp-caption-text">杨慕仁个展“成为说故事的人”，以卑南语为叙事轴线，希望观众透过作品听见语言的色彩，看见故事的能量。（简惠敏／大纪元）</figcaption></figure>
+<figure id="attachment_14604465" aria-describedby="caption-attachment-14604465" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14604465-798299.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14604465" src="https://i.epochtimes.com/assets/uploads/2025/09/id14604465-798299-600x338.jpg" alt="" width="600" b="338"></a><figcaption id="caption-attachment-14604465" class="wp-caption-text">杨慕仁个展“成为说故事的人”，以卑南语为叙事轴线，希望观众透过作品听见语言的色彩，看见故事的能量。（简惠敏／大纪元）</figcaption></figure>
 <p>责任编辑：玉珍</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282736.md#1">学作卑南族传统刺绣配件 黄进忠的文化之旅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/7/n14589256.md#1">台东3妇疑食野菜中毒 卫生局采检送验</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/19/n14597996.md#1">传承卑南族传统织布 孙菊花获登录人间国宝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/23/n14600545.md#1">台东疑龙卷风刮倒指示牌 山区2天雨量破300毫米</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/24/n14601806.md#1">屏东双语领航接轨国际 跨国交流学子自信走向世界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/26/n14603445.md#1">屏东特搜结束花莲救灾归队 周春米：引以为荣</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/28/n14604312.md#1">嘉义法轮功学员分享修炼转变　中秋齐向师尊送祝福</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/28/n14604366.md#1">北港扶轮社携手社大乐团  板头车站音乐会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/28/n14604325.md#1">交通安全嘉游赞 于文化公园热闹登场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/28/n14604230.md#1">屏东县庆祝教师节 表扬获师铎奖等优良教师</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/31/n11758706.md#1" target="_blank">张林：共军在朝鲜战争中丧生两百万（1）</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/10/n7881771.md#1" target="_blank">大法开传 福泽众生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/10/n2962346.md#1" target="_blank">鲜为人知的马克思之一：专制的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/22/n2973029.md#1" target="_blank">千百度：是谁让他们沦为了残酷迫害中国人民的凶手？</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579437.md#1">东坡闲话 唐明皇因这首诗歌落泪 果真一诗成谶？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/8/n14526856.md#1">诗仙李白惊才绝艳 最高亢美妙的盛唐之音</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/5/n14588482.md#1">四连血月不寻常？（1）史上最吸睛的例子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/4/n14587803.md#1">《论语》说（88）：孔子称子贡为“瑚琏”是褒是贬？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/6/n14588973.md#1">【未解之谜】佛家四大爱情故事：揭秘幸福的真正含义</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/12/n14593411.md#1">【新闻大破解】川普促欧美对中关税100% 唤印度站队</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/12/n14593478.md#1">【马克时空】普习会后俄狂轰基辅 无人机进波兰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/11/n14592463.md#1">【百年真相】权力阴影下的中央警卫局秘辛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/11/n14592181.md#1">演员于朦胧在北京坠亡 最先发消息者被禁言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/10/n14591722.md#1">NASA毅力号发现新证据 火星或曾有生命</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/10/n14591703.md#1">知名保守派人士柯克遭枪击身亡 川普发声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/11/n14592504.md#1">大陆男星于朦胧坠楼身亡 曾因拒潜规则遭雪藏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/10/n14591726.md#1">那英丈夫孟桐被曝出轨 两人关联企业均已注销</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/12/n14592616.md#1">辛芷蕾不爽外界借她得奖贬低其他演员</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/11/n14591949.md#1">Lulu、陈汉典宣布结婚 共发声明：将携手未来</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/11/n14592048.md#1">米莉爱考克获冈恩赞：“超少女”最好的人选</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/12/n14593001.md#1">家里有果树的人记得做这件事 否则会有麻烦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/10/n14591285.md#1">为何养狗的人应该穿白袜？ 专家释疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/11/n14591915.md#1">在家里撒上这种香料 蜘蛛会跟你说拜拜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/30/n14584337.md#1">如何与长辈融洽相处？让专家来告诉你</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/12/n14593320.md#1">穿越时光传统之旅 纽约文艺复兴嘉年华</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/9/28/n14604459.htm">“成为说故事的人”原民文化园区杨慕仁个展开展</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/9/28/n14604459.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
